<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/pagebkg"
    tools:context=".Login">

    <!-- CardView Container -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <!-- LinearLayout Inside the CardView -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/lavender_border">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold"
                android:textColor="@color/lavender"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp" />

            <!-- Player One EditText -->
            <EditText
                android:id="@+id/Username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/lavender_border"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:maxLines="1"
                android:textStyle="italic"
                android:hint="@string/username"
                android:textColor="@color/lavender"
                android:drawablePadding="8dp" />

            <!-- Player Two EditText -->
            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/lavender_border"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:maxLines="1"
                android:textStyle="italic"
                android:hint="@string/password"
                android:textColor="@color/lavender"
                android:drawablePadding="8dp" />

            <CheckBox
                android:id="@+id/rememberMeCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/remember_me"
                android:textColor="@color/lavender"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"
                />


            <!-- Start Game Button -->
            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:text="@string/login"
                android:textSize="18sp"
                android:backgroundTint="@color/lavender"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif"
                app:cornerRadius="20dp" />

            <!-- Play with Computer Button -->
            <Button
                android:id="@+id/playWithComputer"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:text="@string/signup"
                android:textSize="18sp"
                android:backgroundTint="@color/lavender"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif"
                app:cornerRadius="20dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
